; ModuleID = '/home/carl/AnghaBench/Atlas/src/extr_test-latency.c_get_time_diff_scaled.c'
source_filename = "/home/carl/AnghaBench/Atlas/src/extr_test-latency.c_get_time_diff_scaled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }

@.str = private unnamed_addr constant [6 x i8] c"%0.3f\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @get_time_diff_scaled(i32* %0, i32* %1, %struct.TYPE_4__* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca double, align 8
  %8 = alloca double, align 8
  %9 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.TYPE_4__* %2, %struct.TYPE_4__** %6, align 8
  store i8* null, i8** %9, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call double @TIME_DIFF_US(i32* %10, i32* %11)
  store double %12, double* %7, align 8
  %13 = load double, double* %7, align 8
  %14 = fdiv double %13, 1.000000e+03
  store double %14, double* %8, align 8
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8** %9, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = load double, double* %8, align 8
  %18 = call i32 @g_string_printf(%struct.TYPE_4__* %15, i8* %16, double %17)
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  ret i32* %21
}

declare dso_local double @TIME_DIFF_US(i32*, i32*) #1

declare dso_local i32 @g_string_printf(%struct.TYPE_4__*, i8*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
